--- a/desktop.css
+++ b/desktop.css
@@ -132,9 +132,9 @@ body {
   color: rgb(205, 199, 199);
 }
 
-/* .text {
+.text {
   border: 2px solid #f08804;
-} */
+}
 
 .info-bottom {
   font-size: 1.4rem;
