--- a/desktop.css
+++ b/desktop.css
@@ -77,7 +77,7 @@ html {
 
 body {
   font-family: "Amazon Ember", Arial, sans-serif;
-  background-color: rgba(126, 129, 129, 0.229);
+  /* background-color: rgba(126, 129, 129, 0.229); */
 }
 
 .box-4 {
@@ -105,6 +105,10 @@ body {
 /*--------------------LOGO----------------------------*/
 
 .header-3-mobile {
+  display: none;
+}
+
+.section-2-mobile {
   display: none;
 }
 
@@ -406,6 +410,7 @@ select {
   height: 6vh;
   border: 1px solid #cccccc;
   background-color: #f7f8f8;
+  cursor: pointer;
 }
 
 .small-photo {
@@ -469,4 +474,38 @@ select {
 .small-amount {
   font-size: 1.2rem;
   padding-top: 0.4rem;
+}
+/* 
+***************section-3***************** */
+.section-3 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  border-bottom: 1px solid blue;
+  height: 4vh;
+  padding-right: 5rem;
+  padding-left: 22rem;
+}
+
+.nav-left-section-3 a,
+.nav-right-section-3 {
+  color: rgba(91, 88, 88, 0.916);
+  text-decoration: none;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+.fa-circle-info {
+  color: rgba(128, 128, 128, 0.694);
+}
+.nav-left-section-3 a {
+  padding-left: 0.1rem;
+}
+
+.nav-left-section-3 a:hover {
+  text-decoration: underline;
+}
+
+.nav-left-section-3 .fa-chevron-right {
+  font-size: 0.6rem;
 }
