--- a/desktop.css
+++ b/desktop.css
@@ -973,7 +973,7 @@ p {
   border-top: 0.5px solid rgba(128, 128, 128, 0.323);
   width: 55%;
   height: 29vh;
-  position: relative;
+  position: relative
   right: 10rem;
   bottom: 10rem;
   padding-top: 1.5rem;
@@ -1018,52 +1018,84 @@ p {
 }
 
 .info-items-sale {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
+  /* padding-top: 5rem */
 }
 
 .info-items-sale .fa-circle-info {
   color: #0087b8;
+  font-size: 1.8rem;
 }
 
-.
+.check-box-last {
+  padding-top: 2rem;
+}
 
-
-
-
-/* ***************section-6***** */
+/****************section-6***********/
 
 .section-6 {
-  align-items: flex-start;
-  justify-content: center;
   display: flex;
-  position: relative;
-  bottom: 35rem;
-  /* right: 10rem; */
-  height: 80px;
-  width: 93%;
+  /* border: 1px solid blue; */
+  margin-top: 10rem;
+  margin-bottom: 5rem;
+  width: 100%;
+  flex-direction: column;
+  height:40vh
+  
+  
 }
 
 .box-section-6-1 {
-  border-bottom: 2px solid rgb(6, 47, 25);
-  width: 60%;
-}
-
-/* ***************section-7***** */
-
-/* .section-7 {
+  border-top: 0.5px solid rgba(128, 128, 128, 0.323);
+  /* border:1px solid pink; */
+  height:5vh;
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
   flex-direction: column;
-  position: relative;
-  bottom: 27rem;
-  right: 26rem;
-
-  gap: 1rem;
+  justify-content: flex-start;
+  padding-left: 42rem;
+  gap:0.5rem
+  
 }
 
-.box-section-7-1 {
-  border: 1px solid rgb(216, 11, 216);
-  width: 22rem;
-  height: 10vh;
-} */
+.box-section-6-2 {
+height: 30vh;
+width: 100%;
+/* border:1px solid rgb(248, 192, 51); */
+}
+
+.galery {
+  /* border: 1px solid black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.galery-1,
+.galery-2,
+.galery-3,
+.galery-4,
+.galery-5,
+.galery-6,
+.galery-7 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 18rem;
+  /* gap: 2rem; */
+  cursor: pointer;
+}
+
+.btn-arrow {
+  padding: 1.5rem;
+  border: 1px solid gray;
+  border-radius: 5px;
+  cursor: pointer;
+  background:none;
+  box-shadow: 0px 0px 2px gray;
+}
+
+.btn-arrow .fa-chevron-left,
+.btn-arrow .fa-chevron-right {
+  font-size: 1.5rem;
+}
